# fileScanner

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: release.yaml
fileScanner/: FileScanner.cpp  FileScanner.h
hashier/: Hashier.h
utils/: utils.cpp  utils.h
